feat: add widths properties, add container class

--- a/src/assets/scss/elements/_root.scss
+++ b/src/assets/scss/elements/_root.scss
@@ -25,6 +25,10 @@
     --line-height-#{$key}: #{$val};
   }
 
+  @each $key, $val in $widths {
+    --width-#{$key}: #{$val};
+  }
+
   @media (prefers-reduced-motion) {
     --transition: none;
   }
