--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,7 @@
 @import 'settings/scale';
 @import 'settings/colors';
 @import 'settings/fonts';
+@import 'settings/widths';
 
 // =====================================================================
 // 2. Tools
@@ -62,6 +63,7 @@
 //    Class-based selectors which define undecorated design patterns,
 //    for example media object known from OOCSS.
 
+@import 'objects/container';
 
 // =====================================================================
 // 6. Components
@@ -69,7 +71,6 @@
 //    and our UI components are often composed of Objects and Components
 
 @import 'components/site-header';
-@import 'components/site-footer';
 
 // =====================================================================
 // 7. Vendors
