feat: update headings to use clamp for font sizes

--- a/src/assets/scss/elements/_h1.scss
+++ b/src/assets/scss/elements/_h1.scss
@@ -1,7 +1,8 @@
-h1 {
+h1,
+.h1 {
   @include font-serif('black');
 
-  font-size: var(--size-xxxxl);
+  font-size: clamp(var(--size-xxl), 7vw, var(--size-xxxxl));
   line-height: var(--line-height-tight);
   margin-bottom: var(--size-lg);
 }
