--- a/src/assets/scss/elements/_h2.scss
+++ b/src/assets/scss/elements/_h2.scss
@@ -1,7 +1,8 @@
-h2 {
+h2,
+.h2 {
   @include font-serif('black');
 
-  font-size: var(--size-xxxxl);
+  font-size: clamp(var(--size-xxl), 7vw, var(--size-xxxxl));
   line-height: var(--line-height-tight);
   margin-bottom: var(--size-lg);
 }
