feat: update main header section for small screens - update buttons to better share styles - update h1 font size to handle long word on very small screens

--- a/src/assets/partials/site-header-main.html
+++ b/src/assets/partials/site-header-main.html
@@ -21,11 +21,12 @@
       </button>
 
       <button
-        class="site-header__button site-header__button--menu"
+        class="site-header__button site-header__button--menu site-header__menu-toggle"
         aria-label="View Menu"
         aria-controls="main-nav"
       >
-        <img src="menu.svg" alt="" />
+        <span class="menu"><img src="menu.svg" alt="" /></span>
+        <span class="close"><img src="close.svg" alt="" /></span>
       </button>
     </div>
 
