--- a/src/assets/partials/site-header-top-bar.html
+++ b/src/assets/partials/site-header-top-bar.html
@@ -13,7 +13,7 @@
   </a>
 
   <button
-    class="site-header__utility-button"
+    class="site-header__button site-header__button--util-menu site-header__menu-toggle"
     aria-controls="utility-nav"
     aria-label="Toggle Utility Menu"
   >
