--- a/src/assets/scss/elements/_h1.scss
+++ b/src/assets/scss/elements/_h1.scss
@@ -2,7 +2,7 @@ h1,
 .h1 {
   @include font-serif('black');
 
-  font-size: clamp(var(--size-xxl), 7vw, var(--size-xxxxl));
+  font-size: clamp(var(--size-xl), 7vw, var(--size-xxxxl));
   line-height: var(--line-height-tight);
   margin-bottom: var(--size-lg);
 }
