feat: Add site header
- add additional dev dependencies to allow html includes and convert img tags with svg src to an inline svg
- add logo and icon assets 
- update theme styles with widths properties, container class, clamp font sizing for headings, screen reader utility & mixin
- add markup for header and initial styles
- add javascript to handle open/close of menu
- style elements based on aria attributes

--- a/src/assets/scss/elements/_root.scss
+++ b/src/assets/scss/elements/_root.scss
@@ -4,7 +4,7 @@
   }
 
   @each $key, $val in $grays {
-    @each $sub_key, $sub_val in $key {
+    @each $sub_key, $sub_val in $val {
       --color-gray-#{$key}-#{$sub_key}: #{$sub_val};
     }
   }
@@ -23,6 +23,10 @@
 
   @each $key, $val in $line-heights {
     --line-height-#{$key}: #{$val};
+  }
+
+  @each $key, $val in $widths {
+    --width-#{$key}: #{$val};
   }
 
   @media (prefers-reduced-motion) {
