feat: add styles for all 3 sections of the footer - add utility classes to some elements - fix markup from linter

--- a/src/assets/partials/site-footer-bottom.html
+++ b/src/assets/partials/site-footer-bottom.html
@@ -1,22 +1,24 @@
 <div class="site-footer__bottom">
-  <p>Brought to you by</p>
+  <p class="util-margin-b-none">Brought to you by</p>
   <ul class="site-footer__logo-list">
-    <li>
-      <a href="#" aria-label="The Ohio State University"
-        ><img src="osu.svg" alt=""
-      /></a>
+    <li class="site-footer__logo-list-item">
+      <a href="#" aria-label="The Ohio State University">
+        <img src="osu.svg" alt="" />
+      </a>
     </li>
-    <li>
-      <a href="#" aria-label="The Ohio State University Wexner Medical Center"
-        ><img src="osu-wexner.svg" alt=""
-      /></a>
+    <li class="site-footer__logo-list-item">
+      <a href="#" aria-label="The Ohio State University Wexner Medical Center">
+        <img src="osu-wexner.svg" alt="" />
+      </a>
     </li>
-    <li>
+    <li class="site-footer__logo-list-item">
       <a
         href="#"
         aria-label="The Ohio State University Office of Academic Afairs"
-        ><img src="osu-academic-affairs.svg" alt=""
-      /></a>
+      >
+        <img src="osu-academic-affairs.svg" alt="" />
+      </a>
     </li>
   </ul>
+  <a href="#" class="button">View all participating colleges</a>
 </div>
