--- a/src/assets/partials/site-footer-main.html
+++ b/src/assets/partials/site-footer-main.html
@@ -1,7 +1,9 @@
 <div class="site-footer__main">
   <a href="#" class="site-footer__logo">
     <span class="kicker">Center For</span>
-    <span class="h3">Interprofessional Practice and Education</span>
+    <span class="h3 util-font-size-xxl">
+      Interprofessional Practice and Education
+    </span>
   </a>
 
   <ul class="site-footer__social">
@@ -29,19 +31,19 @@
 
   <div class="site-footer__contact">
     <p>
-      <span>Address</span>
+      <span class="h5">Address</span><br />
       100 Building Name<br />
       1 Oval Mall<br />
       Columbus, OH 43210
     </p>
     <p>
-      <a href="mailto:email@osu.edu">email@osu.edu</a>
+      <a href="mailto:email@osu.edu">email@osu.edu</a><br />
       <a href="tel:16142926446">614-292-OHIO</a>
     </p>
   </div>
 
   <div class="site-footer__links">
-    <p>Helpful Links</p>
+    <p class="h5">Helpful Links</p>
     <ul>
       <li><a href="#">Activity Registry</a></li>
       <li><a href="#">News</a></li>
@@ -58,11 +60,11 @@
       <a href="mailto:accessibility@osu.edu">accessibility@osu.edu</a> or
       <a href="tel:16142921760">614-292-1760</a>.
     </p>
-    <ul>
+    <ul class="util-margin-b-xl">
       <li><a href="#">Privacy Statement</a></li>
       <li><a href="#">Non-discrimination Notice</a></li>
       <li><a href="#">Cookie Settings</a></li>
     </ul>
-    <p>&copy; 2022 The Ohio State University</p>
+    <p class="util-margin-b-none">&copy; 2022 The Ohio State University</p>
   </div>
 </div>
