--- a/src/assets/partials/site-footer-subscribe.html
+++ b/src/assets/partials/site-footer-subscribe.html
@@ -1,7 +1,7 @@
 <div class="site-footer__subscribe">
   <div class="site-footer__subscribe-intro">
     <p class="h4">Stay connected</p>
-    <p>
+    <p class="util-color-gray-dark-40 util-margin-b-none util-font-size-md">
       Join our mailing list for the latest from the Center for IPE at Ohio State
       delivered right to your inbox.
     </p>
@@ -9,9 +9,9 @@
 
   <form class="site-footer__form">
     <label for="email" class="util-sr-only">Email</label>
-    <input id="email" name="email" type="text" placeholder="Email" />
-    <input type="submit" value="Subscribe" />
-    <p>
+    <input id="email" name="email" type="email" placeholder="Email" />
+    <input type="submit" value="Subscribe" class="button" />
+    <p class="util-margin-t-xs util-margin-b-none util-font-size-xs">
       By subscribing you agree with the
       <a href="#">Terms and Conditions</a> and <a href="#">Privacy Policy</a>.
     </p>
