feat: add additional utility classes

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -93,4 +93,4 @@
 @import 'utilities/spacing';
 @import 'utilities/screen-reader';
 @import 'utilities/color';
-@import 'utilities/font-size';
+@import 'utilities/typography';
