feat: update component styles - create kicker component and move styles from header/footer to component file - update button hover state - add bordered media component - add link component and caret icon

--- a/src/assets/scss/components/_site-header.scss
+++ b/src/assets/scss/components/_site-header.scss
@@ -146,12 +146,7 @@
     }
 
     .kicker {
-      @include font-sans;
-
-      text-transform: uppercase;
-      display: block;
-      font-size: clamp(var(--size-xs), 4vw, var(--size-sm));
-      line-height: var(--line-height-none);
+      font-weight: 400;
     }
   }
 
