--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -1,3 +1,6 @@
+@use 'sass:map';
+@use 'sass:color';
+
 .button {
   color: var(--color-white);
   background-color: var(--color-scarlet);
@@ -5,4 +8,14 @@
   text-align: center;
   border: 0;
   display: inline-block;
+  transition: background-color 0.2s ease;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    background-color: color.scale(
+      map.get($colors, 'scarlet'),
+      $lightness: -10%
+    );
+  }
 }
