--- a/src/assets/scss/components/_site-footer.scss
+++ b/src/assets/scss/components/_site-footer.scss
@@ -88,12 +88,7 @@
     }
 
     .kicker {
-      @include font-sans;
-
-      text-transform: uppercase;
-      display: block;
-      font-size: clamp(var(--size-xs), 4vw, var(--size-sm));
-      line-height: var(--line-height-none);
+      font-weight: 400;
     }
   }
 
