--- a/src/assets/scss/elements/_body.scss
+++ b/src/assets/scss/elements/_body.scss
@@ -4,6 +4,7 @@ body {
   background-color: var(--color-white);
   font-size: 16px;
   line-height: var(--line-height-normal);
+  color: var(--color-gray-dark-80);
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   overflow-x: hidden;
