feat: import AOS styles

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -91,6 +91,8 @@
 //    to live alongside our styles but still be overridden if needed by
 //    a utility class.
 
+@import 'vendors/aos';
+
 // =====================================================================
 // 8. Utilities
 //    Utilities and helper classes with ability to override anything
