feat: add AOS data attributes to elements to animate

--- a/src/assets/partials/component-content-w-media.html
+++ b/src/assets/partials/component-content-w-media.html
@@ -1,11 +1,15 @@
 <div class="obj-container">
   <div class="content-w-media">
-    <div class="content-w-media__intro">
+    <div class="content-w-media__intro" data-aos="fade-right">
       <h2 class="content-w-media__heading">Success Stories</h2>
       <a href="#" class="content-w-media__cta link">Explore more stories</a>
     </div>
 
-    <div class="content-w-media__media">
+    <div
+      class="content-w-media__media"
+      data-aos="fade-left"
+      data-aos-delay="200"
+    >
       <div class="bordered-media">
         <img
           src="./assets/images/success-story.jpg"
@@ -20,7 +24,11 @@
       </div>
     </div>
 
-    <div class="content-w-media__content">
+    <div
+      class="content-w-media__content"
+      data-aos="fade-right"
+      data-aos-delay="100"
+    >
       <span class="kicker kicker--scarlet">Practitioners</span>
       <h3>
         Through Virtual Tools and Support, BuckIPE Students Empower Patient
@@ -33,6 +41,8 @@
       <a href="#" class="button">Read the full story</a>
     </div>
 
-    <a href="#" class="content-w-media__cta link">Explore more stories</a>
+    <a href="#" class="content-w-media__cta link" data-aos="fade-right"
+      >Explore more stories</a
+    >
   </div>
 </div>
