--- a/src/assets/partials/component-wysiwyg-content.html
+++ b/src/assets/partials/component-wysiwyg-content.html
@@ -1,5 +1,5 @@
 <div class="obj-container">
-  <div class="wysiwyg-content">
+  <div class="wysiwyg-content" data-aos="fade-up">
     <h3 class="util-font-family-sans util-font-weight-bold">
       Bridging divides for better health
     </h3>
