feat: add stats component - include file in index - style component

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -83,6 +83,7 @@
 @import 'components/wysiwyg-content';
 @import 'components/bordered-media';
 @import 'components/content-w-media';
+@import 'components/stats';
 
 // =====================================================================
 // 7. Vendors
