feat: add news component - add markup to partial file and include in index - add styles for component

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -84,6 +84,7 @@
 @import 'components/bordered-media';
 @import 'components/content-w-media';
 @import 'components/stats';
+@import 'components/news';
 
 // =====================================================================
 // 7. Vendors
