fix: update filename for 2x images

--- a/src/assets/partials/component-news.html
+++ b/src/assets/partials/component-news.html
@@ -14,8 +14,8 @@
         <img
           src="./assets/images/vet-care.jpg"
           srcset="
-            ./assets/images/vet-care.jpg 1x,
-            ./assets/images/vet-care.jpg 2x
+            ./assets/images/vet-care.jpg    1x,
+            ./assets/images/vet-care-2x.jpg 2x
           "
           width="675"
           height="450"
@@ -41,8 +41,8 @@
           <img
             src="./assets/images/buck-ipe.jpg"
             srcset="
-              ./assets/images/buck-ipe.jpg 1x,
-              ./assets/images/buck-ipe.jpg 2x
+              ./assets/images/buck-ipe.jpg    1x,
+              ./assets/images/buck-ipe-2x.jpg 2x
             "
             width="200"
             height="200"
@@ -64,7 +64,7 @@
         <div class="news-item__image">
           <img
             src="./assets/images/exam.jpg"
-            srcset="./assets/images/exam.jpg 1x, ./assets/images/exam.jpg 2x"
+            srcset="./assets/images/exam.jpg 1x, ./assets/images/exam-2x.jpg 2x"
             width="200"
             height="200"
             alt="a doctor checking a young patient's throat"
@@ -85,8 +85,8 @@
           <img
             src="./assets/images/doctor-patient-square.jpg"
             srcset="
-              ./assets/images/doctor-patient-square.jpg 1x,
-              ./assets/images/doctor-patient-square.jpg 2x
+              ./assets/images/doctor-patient-square.jpg    1x,
+              ./assets/images/doctor-patient-square-2x.jpg 2x
             "
             width="200"
             height="200"
