feat: add page hero - add component styles for page links - add component styles for event list - add page hero component to index and style

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -85,6 +85,9 @@
 @import 'components/content-w-media';
 @import 'components/stats';
 @import 'components/news';
+@import 'components/page-hero';
+@import 'components/page-links';
+@import 'components/event-list';
 
 // =====================================================================
 // 7. Vendors
