feat: add skip link

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -88,6 +88,7 @@
 @import 'components/page-hero';
 @import 'components/page-links';
 @import 'components/event-list';
+@import 'components/skip-link';
 
 // =====================================================================
 // 7. Vendors
