--- a/src/assets/scss/elements/_body.scss
+++ b/src/assets/scss/elements/_body.scss
@@ -8,4 +8,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   overflow-x: hidden;
+
+  // -----------------------------------------
+  //	body class when mobile menu is active
+  // -----------------------------------------
+  &.mobile-menu-displayed {
+    overflow: hidden;
+    height: 100vh;
+    position: fixed;
+  }
 }
