tweak settings on individual elements across components

--- a/src/assets/partials/component-news.html
+++ b/src/assets/partials/component-news.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="news__list" data-aos="fade" data-aos-delay="200">
-      <div class="news-item" data-aos="fade-up" data-aos-delay="400">
+      <div class="news-item" data-aos="fade-in" data-aos-delay="400">
         <div class="news-item__image">
           <img
             src="./assets/images/buck-ipe.jpg"
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="news-item" data-aos="fade-up" data-aos-delay="400">
+      <div class="news-item" data-aos="fade-in" data-aos-delay="400">
         <div class="news-item__image">
           <img
             src="./assets/images/exam.jpg"
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="news-item" data-aos="fade-up" data-aos-delay="400">
+      <div class="news-item" data-aos="fade-in" data-aos-delay="400">
         <div class="news-item__image">
           <img
             src="./assets/images/doctor-patient-square.jpg"
