--- a/src/assets/partials/component-page-hero.html
+++ b/src/assets/partials/component-page-hero.html
@@ -2,7 +2,7 @@
   <div class="obj-container">
     <h1 class="page-hero__heading">Practitioners</h1>
 
-    <div class="page-hero__media" data-aos="fade-left">
+    <div class="page-hero__media">
       <div class="bordered-media">
         <img
           src="./assets/images/doctor-patient.jpg"
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="page-hero__content" data-aos="fade-up">
+    <div class="page-hero__content">
       <h2 class="h1">Create a collaborative culture within your practice.</h2>
       <p class="util-font-size-md">
         Healthier populations start with stronger professional collaboration.
@@ -27,43 +27,43 @@
       </p>
     </div>
 
-    <div class="page-hero__links page-links" data-aos="fade-up">
-      <h3 class="page-links__heading">Resources</h3>
+    <div class="page-hero__links page-links">
+      <h3 class="page-links__heading" data-aos="fade-in">Resources</h3>
 
       <ul class="page-links__list">
-        <li class="page-links__item">
+        <li class="page-links__item" data-aos="fade-in">
           <a href="#" class="page-links__link link">
             Integrating IPE into your organization
           </a>
         </li>
-        <li class="page-links__item">
+        <li class="page-links__item" data-aos="fade-in">
           <a href="#" class="page-links__link link">
             Student Recruiting Guide
           </a>
         </li>
       </ul>
 
-      <h3 class="page-links__heading">Connect</h3>
+      <h3 class="page-links__heading" data-aos="fade-in">Connect</h3>
 
       <ul class="page-links__list">
-        <li class="page-links__item">
+        <li class="page-links__item" data-aos="fade-in">
           <a href="#" class="page-links__link link">
             Collaborate with BuckIPE
           </a>
         </li>
-        <li class="page-links__item">
+        <li class="page-links__item" data-aos="fade-in">
           <a href="#" class="page-links__link link">OSU IPE Office</a>
         </li>
-        <li class="page-links__item">
+        <li class="page-links__item" data-aos="fade-in">
           <a href="#" class="page-links__link link">Where to find us?</a>
         </li>
       </ul>
     </div>
 
-    <div class="page-hero__event-list event-list" data-aos="fade-up">
-      <h3 class="event-list__heading">Upcoming Events</h3>
+    <div class="page-hero__event-list event-list">
+      <h3 class="event-list__heading" data-aos="fade-in">Upcoming Events</h3>
       <ul class="event-list__list">
-        <li class="event-list__item">
+        <li class="event-list__item" data-aos="fade-in">
           <a href="#" class="event-list__link">
             <span class="event-list__date">
               <span class="day">05</span>
@@ -79,7 +79,7 @@
           </a>
         </li>
 
-        <li class="event-list__item">
+        <li class="event-list__item" data-aos="fade-in">
           <a href="#" class="event-list__link">
             <span class="event-list__date">
               <span class="day">22</span>
@@ -95,7 +95,7 @@
           </a>
         </li>
 
-        <li class="event-list__item">
+        <li class="event-list__item" data-aos="fade-in">
           <a href="#" class="event-list__link">
             <span class="event-list__date">
               <span class="day">22</span>
@@ -111,7 +111,9 @@
         </li>
       </ul>
 
-      <a href="#" class="event-list__cta link">Explore our calendar</a>
+      <a href="#" class="event-list__cta link" data-aos="fade-in">
+        Explore our calendar
+      </a>
     </div>
   </div>
 </div>
