--- a/src/assets/partials/component-stats.html
+++ b/src/assets/partials/component-stats.html
@@ -4,21 +4,21 @@
       <span class="stats__number">261</span>
       <span class="stats__detail">IPE Educators</span>
     </li>
-    <li class="stats__item" data-aos="fade-left" data-aos-delay="200">
+    <li class="stats__item" data-aos="fade-right" data-aos-delay="300">
       <span class="stats__number">$4B</span>
       <span class="stats__detail">
         Invested over the next five years to advance teaching and learning in
         academic health care
       </span>
     </li>
-    <li class="stats__item" data-aos="fade-right" data-aos-delay="300">
+    <li class="stats__item" data-aos="fade-right">
       <span class="stats__number">1,033</span>
       <span class="stats__detail">
         Invested over the next five years to advance teaching and learning in
         academic health care
       </span>
     </li>
-    <li class="stats__item" data-aos="fade-left" data-aos-delay="400">
+    <li class="stats__item" data-aos="fade-right" data-aos-delay="300">
       <span class="stats__number">20+</span>
       <span class="stats__detail">Academic programs</span>
     </li>
