fix: add `loading="lazy"` to images - page hero image was purposely skipped here

--- a/src/assets/partials/component-content-w-media.html
+++ b/src/assets/partials/component-content-w-media.html
@@ -20,6 +20,7 @@
           width="675"
           height="450"
           alt="a female employee of The OSU Wexner Medical Center smiling"
+          loading="lazy"
         />
       </div>
     </div>
