--- a/src/assets/partials/component-news.html
+++ b/src/assets/partials/component-news.html
@@ -20,6 +20,7 @@
           width="675"
           height="450"
           alt="a female vet technician is examining a light tan-colored french bulldog"
+          loading="lazy"
         />
       </div>
 
@@ -47,6 +48,7 @@
             width="200"
             height="200"
             alt="a large group of people standing on the field at a stadium holding a sign that says BuckIPE"
+            loading="lazy"
           />
         </div>
 
@@ -68,6 +70,7 @@
             width="200"
             height="200"
             alt="a doctor checking a young patient's throat"
+            loading="lazy"
           />
         </div>
 
@@ -91,6 +94,7 @@
             width="200"
             height="200"
             alt="a doctor holding an iPad talking to an older patient"
+            loading="lazy"
           />
         </div>
 
